# gcc-python-plugin

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpybuilder.py  demo.c  gcc-python-callbacks.c  gcc-python-closure.h  gcc-python-pretty-printer.c  gcc-python-rtl.c  gcc-python-wrapper.c  gcc-python.c  gcc-python.h  gcc-with-cpychecker  gcc-with-python  generate-parameter-c.py  testcpybuilder.py  testcpychecker.py  util-fmemopen.c
gcc-c-api/: Makefile
legacy_code/: generate-gimple-c.py
legacy_code/libcpychecker/: PyArg_ParseTuple.py  Py_BuildValue.py  __init__.py  absinterp.py  attributes.py  diagnostics.py  formatstrings.py  initializers.py  refcounts.py
script/: dump_gcc_info.py
src/: CMakeLists.txt  gcc-python-callback.cpp  gcc-python-closure.cpp  gcc-python-closure.h  gcc-python-compat.h  gcc-python-config.h  gcc-python-passmanager.cpp  gcc-python-settings.h  gcc-python-types.h  gcc-python.c  gcc-python.cpp  gcc-python.h  python-ggc-wrapper.cpp  python-ggc-wrapper.h
src/wrapper/: gcc-python-current.cpp  gcc-python-current.h  gcc-python-ggc-markers.cpp  gcc-python-opt_pass.cpp  gcc-python-pass.h
tests/: test_eventcb_include_file.py  test_eventcb_newpass.py  test_eventcb_passexec.py
tests/stubs/: dummy.c
